--- a/demo_prof/src/main/resources/application.properties
+++ b/demo_prof/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
 spring.datasource.url = jdbc:mariadb://localhost:3306/mydb
 spring.datasource.username = root
 spring.datasource.password = 1234
+mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
