--- a/demo_prof/src/main/resources/application.properties
+++ b/demo_prof/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.application.name=demo_prof
 
-
-
 server.port=8088
 
 spring.mvc.view.prefix=/WEB-INF/views/
@@ -11,3 +9,5 @@ spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
 spring.datasource.url = jdbc:mariadb://localhost:3306/mydb
 spring.datasource.username = root
 spring.datasource.password = 1234
+
+mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml 
